--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>qunit-test-driver</groupId>
 	<artifactId>qunit-test-driver</artifactId>
-	<version>0.0.7-SNAPSHOT</version>
+	<version>0.0.7</version>
 	<build>
 		<plugins>
 			<plugin>
