--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>qunit-test-driver</groupId>
+	<groupId>com.googlecode</groupId>
 	<artifactId>qunit-test-driver</artifactId>
 	<version>0.0.7</version>
 	<build>
