--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode</groupId>
 	<artifactId>qunit-test-driver</artifactId>
-	<version>0.2.4</version>
+	<version>0.2.5</version>
+    <name>QUnit Test Driver</name>
 	<build>
 		<plugins>
 			<plugin>
