--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,9 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.googlecode</groupId>
 	<artifactId>qunit-test-driver</artifactId>
-	<version>1.1.0</version>
+	<version>1.2.0</version>
     <name>QUnit Test Driver</name>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -31,11 +32,9 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<includes>
-						<include>**/*Test.java</include>
-						<include>**/*Test.groovy</include>
-					</includes>
-					<argLine>-Dpartition.port.prefix=${partition.port.prefix}</argLine>
+                    <excludes>
+                        <exclude>**/QUnitSuiteTestTest.*</exclude>
+                    </excludes>
 				</configuration>
 			</plugin>
 			<plugin>
