--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cj.qunit-test-driver</groupId>
 	<artifactId>qunit-test-driver</artifactId>
-	<version>1.2.3</version>
+	<version>1.2.4</version>
     <name>QUnit Test Driver</name>
 
 	<build>
@@ -63,7 +63,7 @@
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
+			<artifactId>junit-dep</artifactId>
 			<version>4.8.1</version>
 			<scope>compile</scope>
 		</dependency>
