--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,17 @@
 <project>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cj.qunit-test-driver</groupId>
-	<artifactId>qunit-test-driver</artifactId>
-	<version>1.2.4</version>
-    <name>QUnit Test Driver</name>
-
+	<artifactId>qunit-test-driver-pom</artifactId>
+	<version>1.2.5</version>
+	<packaging>pom</packaging>
+	
+	<name>${pom.artifactId}</name>
+	
+	<modules>
+		<module>core</module>
+		<module>mojo</module>
+	</modules>
+	
 	<build>
 		<plugins>
 			<plugin>
@@ -15,73 +22,6 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.codehaus.gmaven</groupId>
-				<artifactId>gmaven-plugin</artifactId>
-				<version>1.2</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>generateStubs</goal>
-							<goal>compile</goal>
-							<goal>generateTestStubs</goal>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-                    <excludes>
-                        <exclude>**/QUnitTestTest.*</exclude>
-                    </excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>build-helper-maven-plugin</artifactId>
-				<version>1.1</version>
-				<executions>
-					<execution>
-						<id>add-qunit-source</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>add-test-source</goal>
-						</goals>
-						<configuration>
-							<sources>
-								<source>src/test/groovy</source>
-							</sources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit-dep</artifactId>
-			<version>4.8.1</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.groovy</groupId>
-			<artifactId>groovy-all</artifactId>
-			<version>1.7.2</version>
-		</dependency>
-		<dependency>
-			<groupId>net.sourceforge.htmlunit</groupId>
-			<artifactId>htmlunit</artifactId>
-			<version>2.10</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.jetty</groupId>
-			<artifactId>jetty-servlet</artifactId>
-  			<version>7.0.0.v20091005</version>
-  		</dependency>
-	</dependencies>
 </project>
