--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -74,5 +74,10 @@
 			<artifactId>servlet-api</artifactId>
 			<version>3.0.20100224</version>
 		</dependency>
+		<dependency>
+			<groupId>org.httpobjects.jetty</groupId>
+			<artifactId>httpobjects-jetty</artifactId>
+			<version>0.0.3-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
