--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.cj.qunit-test-driver</groupId>
 		<artifactId>qunit-test-driver-pom</artifactId>
-		<version>1.3.2-SNAPSHOT</version>
+		<version>1.3.3</version>
 	</parent>
 	
 	<artifactId>qunit-test-driver</artifactId>
