--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cj.qunit-test-driver</groupId>
 	<artifactId>qunit-test-driver-pom</artifactId>
-	<version>1.3.2-SNAPSHOT</version>
+	<version>1.3.3</version>
 	<packaging>pom</packaging>
 	
 	<name>${pom.artifactId}</name>
