--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.cj.qunit-test-driver</groupId>
 	<artifactId>qunit-test-driver-pom</artifactId>
-	<version>1.3.5-SNAPSHOT</version>
+	<version>1.3.6-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>${pom.artifactId}</name>
@@ -60,4 +60,18 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+            <repositories>
+                <repository>
+                    <id>cjdev-open-source-snapshots</id>
+                    <url>https://repository-cjdev.forge.cloudbees.com/snapshot/</url>
+                    <releases>
+                        <enabled>true</enabled>
+                    </releases>
+                    <snapshots>
+                        <enabled>true</enabled>
+                    </snapshots>
+                </repository>
+            </repositories>
+
 </project>
