--- a/core/pom.xml
+++ b/core/pom.xml
@@ -85,13 +85,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<dependency>
 			<groupId>net.sourceforge.htmlunit</groupId>
 			<artifactId>htmlunit</artifactId>
-			<version>2.10</version>
+			<version>2.12</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
 			<artifactId>jetty-servlet</artifactId>
-			<version>7.0.0.v20091005</version>
+            <version>${eclipse.jetty.version}</version>
 		</dependency>
 	</dependencies>
 </project>
