--- a/junit/pom.xml
+++ b/junit/pom.xml
@@ -9,13 +9,13 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 
 	<artifactId>qunit-junit</artifactId>
 
-	<name>${pom.artifactId}</name>
+	<name>${project.artifactId}</name>
 
 	<dependencies>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qunit-test-driver</artifactId>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
 </project>
