--- a/mojo/pom.xml
+++ b/mojo/pom.xml
@@ -10,7 +10,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 	<artifactId>qunit-maven-plugin</artifactId>
 	<packaging>maven-plugin</packaging>
 	
-    <name>${pom.artifactId}</name>
+    <name>${project.artifactId}</name>
 
 	<build>
 		<plugins>
@@ -46,9 +46,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 			<version>6.1.24</version>
 		</dependency>
 		<dependency>
-			<groupId>${pom.groupId}</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>qunit-test-driver</artifactId>
-			<version>${pom.version}</version>
+			<version>${project.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.jetty</groupId>
