--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.cj.qunit-test-driver</groupId>
         <artifactId>qunit-test-driver-pom</artifactId>
-        <version>1.5.0</version>
+        <version>1.6.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>qunit-test-driver</artifactId>
