--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
     <modelVersion>4.0.0</modelVersion>
+    
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
+
+
     <groupId>com.cj.qunit-test-driver</groupId>
     <artifactId>qunit-test-driver-pom</artifactId>
     <version>1.8.0-SNAPSHOT</version>
+    
     <packaging>pom</packaging>
+    
     <properties>
         <eclipse.jetty.version>8.1.9.v20130131</eclipse.jetty.version>
     </properties>
@@ -75,5 +86,30 @@
             </snapshots>
         </repository>
     </repositories>
+
+    <!-- BEGIN: STUFF REQUIRED BY THE CENTRAL REPO -->
+    <description>simple http for the jvm</description>
+    <url>https://github.com/cjdev/qunit-test-driver</url>
+    <licenses>
+        <license>
+            <name>GPL 2 + classpath exception</name>
+            <url>https://raw.github.com/cjdev/qunit-test-driver/master/LICENSE</url>
+        </license>
+    </licenses>
+    <scm>
+        <connection>scm:git:git@github.com:cjdev/qunit-test-driver.git</connection>
+        <url>scm:git:git@github.com:cjdev/qunit-test-driver.git</url>
+        <developerConnection>scm:git:git@github.com:cjdev/qunit-test-driver.git</developerConnection>
+        <tag>HEAD</tag>
+    </scm>
+
+    <developers>
+        <developer>
+            <id>ratamacue</id>
+            <name>David Ron</name>
+            <email>david.m.ron@gmail.com</email>
+        </developer>
+    </developers>
+    <!-- END: STUFF REQUIRED BY THE CENTRAL REPO -->
 
 </project>
