--- a/junit/pom.xml
+++ b/junit/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <groupId>com.cj.qunit-test-driver</groupId>
         <artifactId>qunit-test-driver-pom</artifactId>
-        <version>1.9.0</version>
+        <version>1.9.1-SNAPSHOT</version>
     </parent>
 
     <artifactId>qunit-junit</artifactId>
